Added functionality news from other countries

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,13 @@
       <h1><%= title %></h1>
       <p>Welcome to <%= title %></p>
       <p>Content provided by The Times of India</p>
+      <nav>
+        <a href="/">India</a>
+        <a href="/China">China</a>
+        <a href="/US">USA</a>
+        <a href="/EU">EU</a>
+        <a href="/refresh">Refresh</a>
+      </nav>
     </header>
 
     <hr>
