Added money-control.py as scraper

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
         <a href="/China">China</a>
         <a href="/US">USA</a>
         <a href="/EU">EU</a>
+        <a href="/Economics">Economics Money Control</a>
         <a href="/refresh">Refresh</a>
       </nav>
     </header>
